manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "devcluster-8dd1"
    labels:
        app: "devcluster-8dd1"
spec:
    type: ClusterIP
    ports:
    - port: 8501
      targetPort: 8501
      protocol: TCP
      name: http
    selector:
        app: "devcluster-8dd1"
